# openclaw_relay

./: .gitignore  README.md  pyproject.toml
config/: relay.example.toml  relay.hosts.example  relay.remote.example.toml
deploy/: docker-compose.rabbitmq.yml
deploy/client/: com.openclaw.relay-mailbox-injector.plist.template  com.openclaw.relay-mailbox-worker.plist.template  openclaw-relay-client.env.example  relay-mailbox-injector.py  relay-mailbox-send.sh  relay-mailbox-worker.py
deploy/monitoring/: alertmanager.yml  openclaw-relay-alerts.yml  prometheus-openclaw-relay-job.yml  prometheus.yml
deploy/systemd/: openclaw-relay-cleanup.service  openclaw-relay-cleanup.timer  openclaw-relay-rabbitmq-worker@.service  openclaw-relay.env.example  openclaw-relay.service  restart-openclaw-relay.sh
doc/: Alertmanager導入.md  GitHub公開前チェックリスト.md  IP変更時の対処.md  OptionABC001指示書.md  OptionABC001送信ガイド.md  Prometheus導入.md  RabbitMQ導入.md  RabbitMQ移行設計.md  RelayサービスAPI仕様.md  Relay開発手順.md  retentionとcleanup.md  systemd常駐化.md  workerエージェント指示書.md  アーキテクチャ概要.md  インストールガイド.md  クライアント導入ガイド.md  シンプルメッセージ移行.md  文書一覧.md  新規worker追加手順.md  日常運用ガイド.md  現状と今後.md  監視とアラート.md  記事ネタ_OpenClaw間メッセージ連携.md  運用ダッシュボード.md  運用監視画面.md
src/openclaw_relay/: __init__.py  __main__.py  alerts.py  app.py  audit.py  broker.py  cleanup.py  cli.py  config.py  dashboard.py  envelope.py  health.py  (+9 more)
tests/: test_broker.py  test_cleanup.py  test_cli.py  test_config.py  test_dashboard.py  test_health.py  test_ingestion.py  test_mailbox_api.py  test_mailbox_worker_script.py  test_rabbitmq_runtime.py  test_state.py
