[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-relay"
version = "0.1.0"
description = "Relay service for bridging OpenClaw A and OpenClaw B over private ingress"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
openclaw-relay = "openclaw_relay.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
